--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/hotel
+spring.datasource.url=jdbc:mysql://localhost:3306/School
 
 spring.datasource.username=root
 
@@ -10,7 +10,7 @@ spring.jpa.show-sql=true
 
 spring.jpa.generate-ddl=true
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-message=always
 
